2003-10-14  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/cal.c (cal_notify_timezone_requested): never send NULL
	strings to ORBit.

	* gui/e-cal-view.c (e_cal_view_create_popup_menu): removed
	unneeded variables. Also, fixed a typo that was making the
	menu options be disabled when they should be enabled.

2003-10-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch] (e_cal_model_get_client_for_uri): new function.

	* gui/gnome-cal.[ch] (gnome_calendar_set_default_client): new function.

	* gui/calendar-component.c (primary_source_selection_changed_callback):
	set the default client on the calendar view to be the primary
	selection on the source list.

2003-10-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/new-calendar.c (new_calendar_dialog): set a default group
	on the calendar group option menu and create the source if all checks
	are passed.

2003-10-12  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/new-calendar.c (new_calendar_dialog): set up widgets
	loaded from the Glade file.

2003-10-10  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/new-calendar.[ch]: added new widget, which implements
	the dialog to create new calendars.

	* gui/dialogs/new-calendar.glade: basic mockup of the dialog.

	* gui/dialogs/Makefile.am: added new files.

	* gui/calendar-commands.c (file_new_calendar_cb): open the new calendar
	dialog to allow user to create a new cal.

2003-10-10  Rodrigo Moya <rodrigo@ximian.com>

	* gui/control-factory.c (calendar_properties_init): pass the
	BonoboControl to get_prop/set_prop.
	(get_prop): obtain the GnomeCalendar from the control.
	(set_prop): ditto, and when the URI property is changed,
	sensitize the UI as approppriate.

	* gui/calendar-commands.c (calendar_control_sensitize_calendar_commands):
	made this function public.

	* gui/calendar-commands.h: added new prototype.

2003-10-10  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-commands.c (file_new_calendar_cb,